--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <title>Родословная Софии Августы Фредерики Ангальт-Цербской по отцовской линии</title>
   </head>
   <body>
-    <header class="flex items-center justify-around text-xl">&nbsp;</header>
+    <header class="flex items-center justify-around">
+      <div id="title" class="flex items-center justify-between">
+        <img src="img/logo.svg">
+        <span class="text-sm md:text-base lg:text-lg">Родословная Софии Августы Фредерики</span>
+      </div>
+    </header>
     <main class="flex items-center flex-col h-10"></main>
-    <footer class="text-center">&copy;&nbsp;<span id="year"></span>, Михаил Беляков</footer>
+    <footer class="text-center">&copy;&nbsp;<span id="copy-year"></span>, Михаил Беляков</footer>
   </body>
   <script>
-    document.querySelector('header').textContent = document.title
-    document.querySelector('#year').textContent = new Date().getFullYear()
+    document.querySelector('#copy-year').textContent = new Date().getFullYear()
   </script>
   </html>
